# clocked-modulator

./: CLAUDE.md  Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
.claude/skills/explain/: SKILL.md
.claude/skills/review/: SKILL.md
assets/: Icons.aseprite  Page_Titles.aseprite  README.md  Screen_Home.aseprite  Waveshapes.aseprite
debug/: .gitignore  usb_serial.1.toe  usb_serial.toe
docs/: SH1106 Async I2C Driver - Specification Sheet.md  modulator_state_ui_guide.md  modulator_state_ui_guide_v2.md  serial_to_touchdesigner.md
src/: board.rs  display.rs  encoder.rs  input.rs  led.rs  main.rs  modulator.rs  nav.rs  phasor.rs  sh1106.rs  tap_tempo.rs  usb.rs
