[package]
name = "clocked-modulator"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
libm = "0.2.16"
micromath = "2.1.0"
panic-halt = "1.0.0"

rp235x-hal = { version = "0.4.0", features = [
    "rt",
    "critical-section-impl",
    "binary-info",
] }
sh1106 = "0.5.0"
static_cell = "2.1.1"
usb-device = "0.3.2"
usbd-serial = "0.2.2"
